k8s/base/namespace-database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist-db
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: todolist
